tests/macro-tests/cases/widget_new/incorrect_arg_type2.stderr
error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type2.rs:16:23
   |
16 |         simple_type = true
   |         -----------   ^^^^ the trait `IntoVar<u32>` is not implemented for `bool`
   |         |
   |         required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::simple_type`
  --> cases/widget_new/incorrect_arg_type2.rs:8:53
   |
8  | pub fn simple_type(child: impl UiNode, simple: impl IntoVar<u32>) -> impl UiNode {
   |                                                     ^^^^^^^^^^^^ required by this bound in `simple_type::simple_type`
